--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <div class="body">
-  <mat-toolbar color="primary">
+  <mat-toolbar color="primary" class="header">
     <ng-container>
       <div class="left">
         <a mat-button routerLink="">Home</a>
         <a mat-button routerLink="lobby">Lobby</a>
         <a mat-button routerLink="rules">Rules</a>
+        <a mat-button routerLink="game">Game</a>
       </div>
 
       <div class="right">
