--- a/src/assets/variable.scss
+++ b/src/assets/variable.scss
@@ -35,3 +35,38 @@ $fontsize-p: 18px;
 $brd-radius: 0.2rem;
 
 $transition-ms: all ease-in-out 150ms;
+
+$navy-blue: #1c2331;
+$navy-blue-darker: #3c4752;
+$navy-blue-darkest: #5c6073;
+$navy-blue-light: #7c8594;
+
+$burgundy: #722f37;
+$burgundy-darker: #94444d;
+$burgundy-darkest: #b65a64;
+$burgundy-light: #d87082;
+
+$purple: #8e44ad;
+$purple-darker: #9f55bd;
+$purple-darkest: #b066cd;
+$purple-light: #c177de;
+
+$blue: #2c3e50;
+$blue-darker: #4f5b66;
+$blue-darkest: #7f8c8d;
+$blue-light: #a8d0e6;
+
+$teal: #16a085;
+$teal-darker: #1abc9c;
+$teal-darkest: #229954;
+$teal-light: #1abc9c;
+
+$grey: #34495e;
+$grey-darker: #7f8c8d;
+$grey-darkest: #95a5a6;
+$grey-light: #bdc3c7;
+
+$red: #e74c3c;
+$red-darker: #c0392b;
+$red-darkest: #a93226;
+$red-light: #f1948a;
