--- a/src/app/main/settings/settings.component.scss
+++ b/src/app/main/settings/settings.component.scss
@@ -4,3 +4,40 @@
   border-radius: 8px;
   display: block;
 }
+
+section {
+  display: table;
+}
+
+.example-label {
+  display: table-cell;
+  font-size: 14px;
+  margin-left: 8px;
+  min-width: 120px;
+}
+
+.example-button-row {
+  display: table-cell;
+  max-width: 800px;
+}
+
+.example-button-row .mat-mdc-button-base {
+  margin: 8px 8px 8px 0;
+}
+
+.example-flex-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.example-button-container {
+  display: flex;
+  justify-content: center;
+  width: 120px;
+}
+
+.card {
+  max-width: 220px;
+  margin: 128px;
+}
