--- a/src/app/main/game/game.component.html
+++ b/src/app/main/game/game.component.html
@@ -139,7 +139,7 @@
     </div>
   </div>
 
-  <div class="action-holder-tester">
+  <div class="action-holder-tester" *ngIf="!game.endOfRound">
     <div
       class="top"
       *ngIf="
