--- a/src/app/main/game/game.component.html
+++ b/src/app/main/game/game.component.html
@@ -1,29 +1,40 @@
 <div class="game">
-  <div class="test-buttons">
-    <button mat-flat-button color="primary" (click)="game.startNewRound()">
-      Start new round
-    </button>
+  <div class="game-info">
+    <div class="test-buttons">
+      <button mat-flat-button color="primary" (click)="game.startNewRound()">
+        Start new round
+      </button>
 
-    <button mat-flat-button color="primary" (click)="game.renderFlop()">
-      Flop
-    </button>
+      <button mat-flat-button color="primary" (click)="game.renderFlop()">
+        Flop
+      </button>
 
-    <button mat-flat-button color="primary" (click)="game.renderTurn()">
-      Turn
-    </button>
+      <button mat-flat-button color="primary" (click)="game.renderTurn()">
+        Turn
+      </button>
 
-    <button mat-flat-button color="primary" (click)="game.renderRiver()">
-      River
-    </button>
+      <button mat-flat-button color="primary" (click)="game.renderRiver()">
+        River
+      </button>
 
-    <button mat-flat-button color="primary" (click)="test()">test</button>
-    <button mat-flat-button color="primary" (click)="test2()">Test2</button>
+      <button mat-flat-button color="primary" (click)="test()">test</button>
+      <button mat-flat-button color="primary" (click)="test2()">Test2</button>
+    </div>
+    <div class="last">
+      Last winning hand: {{ game.lastWinningHand }} <br />
+      Last winner: {{ game.lastWinningPlayer }} <br />
+      Last Pot: {{ game.lastPot }}
+    </div>
   </div>
 
   <div
     class="action-holder"
     *ngIf="game.players[game.curentPlayerInRound].id == logedInUser.id"
   >
+    <div class="hand-info">
+      {{ game.getHandInfo(logedInUser.id) }}
+    </div>
+
     <div
       class="top"
       *ngIf="
@@ -411,8 +422,9 @@
       >
         <div
           *ngIf="
-            player.actGames[game.id].actHand.length > 0 &&
-            player.id == logedInUser.id
+            (player.actGames[game.id].actHand.length > 0 &&
+              player.id == logedInUser.id) ||
+            game.endOfRound
           "
           class="cards"
         >
@@ -438,7 +450,8 @@
         <div
           *ngIf="
             player.id != logedInUser.id &&
-            player.actGames[game.id].actHand.length > 0
+            player.actGames[game.id].actHand.length > 0 &&
+            !game.endOfRound
           "
           class="cards"
         >
